feat: add policy

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,5 +1,8 @@
 <footer class="footer">
   <div class="footer__container">
-    
+    <button class="footer__policy" data-open>
+      Политика конфиденциальности
+    </button>
+    <p class="footer__text">Сайт не является публичной офертой</p>
   </div>
 </footer>
