fix: update files

--- a/src/index.html
+++ b/src/index.html
@@ -1,59 +1,225 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @@include('html/head.html', {
-    'title': 'Главная'
-  })
-  <body>
-    <div class="wrapper">
-      @@include('html/header.html', {})
-      <main class="page">
-        <section class="page__promo promo">
-          <div class="promo__container" >
-            <div class="promo__grandma-bg" data-prlx-mouse data-prlx-cx="200" data-prlx-cy="700"	>
-              <img src="@img/promo/grandma.png" alt="GrandMa">
+@@include('html/head.html', {
+'title': 'Главная'
+})
+
+<body>
+  <div class="wrapper">
+    @@include('html/header.html', {})
+    <main class="page">
+      <section class="page__promo promo">
+        <div class="promo__container">
+          <div class="promo__grandma-bg" data-prlx-mouse data-prlx-cx="200" data-prlx-cy="700">
+            <img src="@img/promo/grandma.png" alt="GrandMa">
+          </div>
+          <h1 class="promo__title">
+            Теплицы и парники из поликарбоната <span>цены от производителя</span>
+          </h1>
+          <h2 class="promo__subtitle">Купить усиленную теплицу от 599р.</h2>
+          <div class="promo__features features">
+            <ul class="features__list">
+              <li class="features__item">
+                <span class="features__icon" data-prlx-mouse data-prlx-dxr>
+                  <img src="@img/promo/check.png" alt="Check Icon">
+                </span>
+                <span class="features__text">Заводское изготовление</span>
+              </li>
+              <li class="features__item">
+                <span class="features__icon" data-prlx-mouse data-prlx-dyr>
+                  <img src="@img/promo/check.png" alt="Check Icon">
+                </span>
+                <span class="features__text">Срок службы более 20 лет</span>
+              </li>
+              <li class="features__item">
+                <span class="features__icon" data-prlx-mouse data-prlx-dxr>
+                  <img src="@img/promo/check.png" alt="Check Icon">
+                </span>
+                <span class="features__text">Доставка и монтаж в течени 2-3 дней</span>
+              </li>
+              <li class="features__item">
+                <span class="features__icon" data-prlx-mouse data-prlx-dyr>
+                  <img src="@img/promo/check.png" alt="Check Icon">
+                </span>
+                <span class="features__text">Оплата только при получении</span>
+              </li>
+              <li class="features__item">
+                <span class="features__icon" data-prlx-mouse data-prlx-dxr>
+                  <img src="@img/promo/check.png" alt="Check Icon">
+                </span>
+                <span class="features__text">Все теплицы в наличии на складе</span>
+              </li>
+            </ul>
+            <form class="features__form">
+              <label for="" class="features__field">
+                <input type="tel" class="features__input">
+                <span class="features__placeholder">Ваш номер:</span>
+              </label>
+              <button class="features__button" type="submit">Подобрать теплицу</button>
+            </form>
+          </div>
+        </div>
+      </section>
+      <section class="page__promotions promotions">
+        <div class="promotions__container">
+          <h2 class="promotions__title title"><span>Актуальные</span> акции</h2>
+        </div>
+        <div class="promotions__slider swiper">
+          <div class="promotions__wrapper swiper-wrapper">
+            <div class="promotions__slide swiper-slide">
+              <div class="item-promotion">
+                <div class="item-promotion__image">
+                  <img src="@img/promotions/01.jpg" alt="Promotions Image">
+                </div>
+                <div class="item-promotion__footer">
+                  <div class="item-promotion__icon">
+                    <img src="@img/promotions/icon.jpg" alt="Promotions Icon">
+                  </div>
+                  <div class="item-promotion__text">
+                    <span class="item-promotion__text_title">Оставьте заявку <span>сейчас</span></span>
+                    <span class="item-promotion__text_description">Получите подвязку для растений в подарок</span>
+                  </div>
+                  <div class="item-promotion__timer timer" id="timer-podvyazka">
+                    <div class="timer__group timer__group_hours">00</div>
+                    <div class="timer__group timer__group_minutes">36</div>
+                    <div class="timer__group timer__group_seconds">48</div>
+                  </div>
+                  <button type="button" class="item-promotion__button" data-open-modal>
+                    Заказать по акции
+                  </button>
+                </div>
+              </div>
             </div>
-            <h1 class="promo__title">
-              Теплицы и парники из поликарбоната <span>цены от производителя</span>
-            </h1>
-            <h2 class="promo__subtitle">Купить усиленную теплицу от 599р.</h2>
-            <div class="promo__features features">
-              <ul class="features__list">
-                <li class="features__item">
-                  <span class="features__icon"><img src="@img/promo/check.png" alt="Check Icon"></span>
-                  <span class="features__text">Заводское изготовление</span>
-                </li>
-                <li class="features__item">
-                  <span class="features__icon"><img src="@img/promo/check.png" alt="Check Icon"></span>
-                  <span class="features__text">Срок службы более 20 лет</span>
-                </li>
-                <li class="features__item">
-                  <span class="features__icon"><img src="@img/promo/check.png" alt="Check Icon"></span>
-                  <span class="features__text">Доставка и монтаж в течени 2-3 дней</span>
-                </li>
-                <li class="features__item">
-                  <span class="features__icon"><img src="@img/promo/check.png" alt="Check Icon"></span>
-                  <span class="features__text">Оплата только при получении</span>
-                </li>
-                <li class="features__item">
-                  <span class="features__icon"><img src="@img/promo/check.png" alt="Check Icon"></span>
-                  <span class="features__text">Все теплицы в наличии на складе</span>
-                </li>
-              </ul>
-              <form class="features__form">
-                <label for="" class="features__field">
-                  <input type="tel" class="features__input">
-                  <span class="features__placeholder">Ваш номер:</span>
-                </label>
-                <button class="features__button" type="submit">Подобрать теплицу</button>
-              </form>
+            <div class="promotions__slide swiper-slide">
+              <div class="item-promotion">
+                <div class="item-promotion__image">
+                  <img src="@img/promotions/02.jpg" alt="Promotions Image">
+                </div>
+                <div class="item-promotion__footer">
+                  <div class="item-promotion__icon">
+                    <img src="@img/promotions/icon.jpg" alt="Promotions Icon">
+                  </div>
+                  <div class="item-promotion__text">
+                    <span class="item-promotion__text_title">Оставьте заявку <span>сейчас</span></span>
+                    <span class="item-promotion__text_description">Получите подвязку для растений в подарок</span>
+                  </div>
+                  <div class="item-promotion__timer timer" id="timer-domik">
+                    <div class="timer__group timer__group_hours">00</div>
+                    <div class="timer__group timer__group_minutes">36</div>
+                    <div class="timer__group timer__group_seconds">48</div>
+                  </div>
+                  <button type="button" class="item-promotion__button" data-open-modal>
+                    Заказать по акции
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="promotions__slide swiper-slide">
+              <div class="item-promotion">
+                <div class="item-promotion__image">
+                  <img src="@img/promotions/03.jpg" alt="Promotions Image">
+                </div>
+                <div class="item-promotion__footer">
+                  <div class="item-promotion__icon">
+                    <img src="@img/promotions/icon.jpg" alt="Promotions Icon">
+                  </div>
+                  <div class="item-promotion__text">
+                    <span class="item-promotion__text_title">Оставьте заявку <span>сейчас</span></span>
+                    <span class="item-promotion__text_description">Получите подвязку для растений в подарок</span>
+                  </div>
+                  <div class="item-promotion__timer timer" id="timer-hranenie">
+                    <div class="timer__group timer__group_hours">00</div>
+                    <div class="timer__group timer__group_minutes">36</div>
+                    <div class="timer__group timer__group_seconds">48</div>
+                  </div>
+                  <button type="button" class="item-promotion__button" data-open-modal>
+                    Заказать по акции
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="promotions__slide swiper-slide">
+              <div class="item-promotion">
+                <div class="item-promotion__image">
+                  <img src="@img/promotions/04.jpg" alt="Promotions Image">
+                </div>
+                <div class="item-promotion__footer">
+                  <div class="item-promotion__icon">
+                    <img src="@img/promotions/icon.jpg" alt="Promotions Icon">
+                  </div>
+                  <div class="item-promotion__text">
+                    <span class="item-promotion__text_title">Оставьте заявку <span>сейчас</span></span>
+                    <span class="item-promotion__text_description">Получите подвязку для растений в подарок</span>
+                  </div>
+                  <div class="item-promotion__timer timer" id="timer-pensiya">
+                    <div class="timer__group timer__group_hours">00</div>
+                    <div class="timer__group timer__group_minutes">36</div>
+                    <div class="timer__group timer__group_seconds">48</div>
+                  </div>
+                  <button type="button" class="item-promotion__button" data-open-modal>
+                    Заказать по акции
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="promotions__slide swiper-slide">
+              <div class="item-promotion">
+                <div class="item-promotion__image">
+                  <img src="@img/promotions/05.jpg" alt="Promotions Image">
+                </div>
+                <div class="item-promotion__footer">
+                  <div class="item-promotion__icon">
+                    <img src="@img/promotions/icon.jpg" alt="Promotions Icon">
+                  </div>
+                  <div class="item-promotion__text">
+                    <span class="item-promotion__text_title">Оставьте заявку <span>сейчас</span></span>
+                    <span class="item-promotion__text_description">Получите подвязку для растений в подарок</span>
+                  </div>
+                  <div class="item-promotion__timer timer" id="timer-zacepy">
+                    <div class="timer__group timer__group_hours">00</div>
+                    <div class="timer__group timer__group_minutes">36</div>
+                    <div class="timer__group timer__group_seconds">48</div>
+                  </div>
+                  <button type="button" class="item-promotion__button" data-open-modal>
+                    Заказать по акции
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="promotions__slide swiper-slide">
+              <div class="item-promotion">
+                <div class="item-promotion__image">
+                  <img src="@img/promotions/06.jpg" alt="Promotions Image">
+                </div>
+                <div class="item-promotion__footer">
+                  <div class="item-promotion__icon">
+                    <img src="@img/promotions/icon.jpg" alt="Promotions Icon">
+                  </div>
+                  <div class="item-promotion__text">
+                    <span class="item-promotion__text_title">Оставьте заявку <span>сейчас</span></span>
+                    <span class="item-promotion__text_description">Получите подвязку для растений в подарок</span>
+                  </div>
+                  <div class="item-promotion__timer timer" id="timer-dostavka">
+                    <div class="timer__group timer__group_hours">00</div>
+                    <div class="timer__group timer__group_minutes">36</div>
+                    <div class="timer__group timer__group_seconds">48</div>
+                  </div>
+                  <button type="button" class="item-promotion__button" data-open-modal>
+                    Заказать по акции
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
-        </section>
-      </main>
-      @@include('html/footer.html', {})
-    </div>
-    @@include('html/burgerMenu.html', {})
-    @@include('html/policy.html', {})
-    <script src="js/app.min.js"></script>
-  </body>
-</html> 
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
+    </main>
+    @@include('html/footer.html', {})
+  </div>
+  @@include('html/burgerMenu.html', {})
+  @@include('html/policy.html', {})
+  <script src="js/app.min.js"></script>
+</body>
+
+</html>
