feat: add catalog HTML

--- a/src/index.html
+++ b/src/index.html
@@ -354,6 +354,16 @@
           </div>
         </div>
       </section>
+      <section class="page__catalog catalog">
+        <div class="catalog__container">
+          <div class="catalog__vegetables-ibg">
+            <img src="@img/catalog/bg-vegetables.png" alt="">
+          </div>
+          <h2 class="catalog__title title">
+            <span>Теплицы в наличии</span> на складе в Минске
+          </h2>
+        </div>
+      </section>
     </main>
     @@include('html/footer.html', {})
   </div>
