feat: add section individual-selection

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('html/head.html', {
-'title': 'Главная'
+'title': 'Теплицы и парники из поликарбоната'
 })
 
 <body>
@@ -259,7 +259,8 @@
                 </div>
                 <div class="whyme__body">
                   <p class="whyme__article">
-                    Оперативная доставка со склада в день заказа на расстояния до 100км от Нижнего Новгорода. Оплата при получении.
+                    Оперативная доставка со склада в день заказа на расстояния до 100км от Нижнего Новгорода. Оплата при
+                    получении.
                   </p>
                 </div>
               </li>
@@ -272,7 +273,8 @@
                 </div>
                 <div class="whyme__body">
                   <p class="whyme__article">
-                    Покупайте на прямую от завода теплиц. Собственное производство теплиц позволяет сохранять невысокую цену.
+                    Покупайте на прямую от завода теплиц. Собственное производство теплиц позволяет сохранять невысокую
+                    цену.
                   </p>
                 </div>
               </li>
@@ -362,6 +364,182 @@
           <h2 class="catalog__title title">
             <span>Теплицы в наличии</span> на складе в Минске
           </h2>
+        </div>
+      </section>
+      <section class="page__individual-selection individual-selection">
+        <div class="individual-selection__container">
+          <h2 class="individual-selection__title title">Индивидуальный подбор</h2>
+          <p class="individual-selection__desc">
+            Заполните поля и получите подбор теплицы <br>
+            по подходящим для вас параметрам в течение 1 минуты
+          </p>
+          <div class="individual-selection__form-wrap">
+            <form class="individual-selection__form-selection form-selection">
+              <div class="form-selection__form-field">
+                <label class="form-selection__label" for="greenhouseLength">Длина</label>
+                <div class="form-selection__dropdown custom-dropdown" id="greenhouseLength">
+                  <button class="custom-dropdown__btn" type="button" data-dropdown-button>
+                    <span class="custom-dropdown__label">Выберите длину теплицы</span>
+                    <span class="custom-dropdown__icon">
+                      <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M10.8849 0.294983L6.29492 4.87498L1.70492 0.294983L0.294922 1.70498L6.29492 7.70498L12.2949 1.70498L10.8849 0.294983Z"
+                          fill="black" />
+                      </svg>
+                    </span>
+                  </button>
+                  <ul class="custom-dropdown__list  select-list" data-dropdown-list>
+                    <li data-value="4 метров" class="select-list__item">4 метров</li>
+                    <li data-value="6 метров" class="select-list__item">6 метров</li>
+                    <li data-value="8 метров" class="select-list__item">8 метров</li>
+                    <li data-value="10 метров" class="select-list__item">10 метров</li>
+                    <li data-value="12 метров" class="select-list__item">12 метров</li>
+                  </ul>
+                  <input type="hidden" value="" name="greenhouseLength">
+                </div>
+              </div>
+              <div class="form-selection__form-field">
+                <label class="form-selection__label" for="greenhouseWidth">Ширина</label>
+                <div class="form-selection__dropdown custom-dropdown" id="greenhouseWidth">
+                  <button class="custom-dropdown__btn" type="button" data-dropdown-button>
+                    <span class="custom-dropdown__label">Выберите ширину теплицы</span>
+                    <span class="custom-dropdown__icon">
+                      <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M10.8849 0.294983L6.29492 4.87498L1.70492 0.294983L0.294922 1.70498L6.29492 7.70498L12.2949 1.70498L10.8849 0.294983Z"
+                          fill="black" />
+                      </svg>
+                    </span>
+                  </button>
+                  <ul class="custom-dropdown__list  select-list" data-dropdown-list>
+                    <li data-value="2 метра" class="select-list__item">2 метра</li>
+                    <li data-value="2.4 метра" class="select-list__item">2.4 метра</li>
+                    <li data-value="3 метра" class="select-list__item">3 метра</li>
+                    <li data-value="3.5 метра" class="select-list__item">3.5 метра</li>
+                  </ul>
+                  <input type="hidden" value="" name="greenhouseWidth">
+                </div>
+              </div>
+              <div class="form-selection__form-field">
+                <label class="form-selection__label" for="typePolycarbonate">Вид поликарбоната</label>
+                <div class="form-selection__dropdown custom-dropdown" id="typePolycarbonate">
+                  <button class="custom-dropdown__btn" type="button" data-dropdown-button>
+                    <span class="custom-dropdown__label">Выберите поликарбонат</span>
+                    <span class="custom-dropdown__icon">
+                      <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M10.8849 0.294983L6.29492 4.87498L1.70492 0.294983L0.294922 1.70498L6.29492 7.70498L12.2949 1.70498L10.8849 0.294983Z"
+                          fill="black" />
+                      </svg>
+                    </span>
+                  </button>
+                  <ul class="custom-dropdown__list  select-list" data-dropdown-list>
+                    <li data-value="Эконом" class="select-list__item">Эконом</li>
+                    <li data-value="Стандарт" class="select-list__item">Стандарт</li>
+                    <li data-value="Премиум" class="select-list__item">Премиум</li>
+                  </ul>
+                  <input type="hidden" value="" name="typePolycarbonate">
+                </div>
+              </div>
+              <div class="form-selection__form-field">
+                <label class="form-selection__label" for="metalCoating">Покрытие металла</label>
+                <div class="form-selection__dropdown custom-dropdown" id="metalCoating">
+                  <button class="custom-dropdown__btn" type="button" data-dropdown-button>
+                    <span class="custom-dropdown__label">Выберите покрытие</span>
+                    <span class="custom-dropdown__icon">
+                      <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M10.8849 0.294983L6.29492 4.87498L1.70492 0.294983L0.294922 1.70498L6.29492 7.70498L12.2949 1.70498L10.8849 0.294983Z"
+                          fill="black" />
+                      </svg>
+                    </span>
+                  </button>
+                  <ul class="custom-dropdown__list  select-list" data-dropdown-list>
+                    <li data-value="Порошковое покрытие" class="select-list__item">Порошковое покрытие</li>
+                    <li data-value="Оцинковка" class="select-list__item">Оцинковка</li>
+                  </ul>
+                  <input type="hidden" value="" name="metalCoating">
+                </div>
+              </div>
+              <div class="form-selection__form-field">
+                <label class="form-selection__label" for="connectionType">Тип соединения</label>
+                <div class="form-selection__dropdown custom-dropdown" id="connectionType">
+                  <button class="custom-dropdown__btn" type="button" data-dropdown-button>
+                    <span class="custom-dropdown__label">Выберите соединения</span>
+                    <span class="custom-dropdown__icon">
+                      <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M10.8849 0.294983L6.29492 4.87498L1.70492 0.294983L0.294922 1.70498L6.29492 7.70498L12.2949 1.70498L10.8849 0.294983Z"
+                          fill="black" />
+                      </svg>
+                    </span>
+                  </button>
+                  <ul class="custom-dropdown__list  select-list" data-dropdown-list>
+                    <li data-value="Болтовое" class="select-list__item">Болтовое</li>
+                    <li data-value="Крабовое" class="select-list__item">Крабовое</li>
+                  </ul>
+                  <input type="hidden" value="" name="connectionType">
+                </div>
+              </div>
+              <div class="form-selection__form-field">
+                <label class="form-selection__label" for="profileSize">Размер профиля</label>
+                <div class="form-selection__dropdown custom-dropdown" id="profileSize">
+                  <button class="custom-dropdown__btn" type="button" data-dropdown-button>
+                    <span class="custom-dropdown__label">Выберите размер профиля</span>
+                    <span class="custom-dropdown__icon">
+                      <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M10.8849 0.294983L6.29492 4.87498L1.70492 0.294983L0.294922 1.70498L6.29492 7.70498L12.2949 1.70498L10.8849 0.294983Z"
+                          fill="black" />
+                      </svg>
+                    </span>
+                  </button>
+                  <ul class="custom-dropdown__list  select-list" data-dropdown-list>
+                    <li data-value="20х20мм" class="select-list__item">20х20мм</li>
+                    <li data-value="40х20мм" class="select-list__item">40х20мм</li>
+                  </ul>
+                  <input type="hidden" value="" name="profileSize">
+                </div>
+              </div>
+              <div class="form-selection__form-field">
+                <label class="form-selection__check-label">
+                  <input type="checkbox" name="straightWall">
+                  <span class="form-selection__custom-checkbox">
+                    <img src="@img/icons/checkbox_check.png" alt="">
+                  </span>
+                  <span class="form-selection__text-check-label">Прямая стенка</span>
+                </label>
+              </div>
+              <div class="form-selection__form-field">
+                <label class="form-selection__check-label">
+                  <input type="checkbox" name="reinforcedFrame">
+                  <span class="form-selection__custom-checkbox">
+                    <img src="@img/icons/checkbox_check.png" alt="">
+                  </span>
+                  <span class="form-selection__text-check-label">Усиленный каркас</span>
+                </label>
+              </div>
+              <div class="form-selection__form-field form-selection__form-field_column form-selection__form-field_name">
+                <label class="form-selection__input-label" for="userName">Ваше имя</label>
+                <input class="form-selection__input-control" type="text" placeholder="Ваше имя" id="userName">
+              </div>
+              <div class="form-selection__form-field form-selection__form-field_column form-selection__form-field_phone">
+                <label class="form-selection__input-label" for="userPhone">Номер телефона</label>
+                <input class="form-selection__input-control" type="tel" placeholder="Введите номер" id="userPhone">
+              </div>
+              <div class="form-selection__form-field form-selection__form-field_button">
+                <button class="form-selection__button-submit" type="submit">Подобрать теплицу</button>
+              </div>
+            </form>
+          </div>
+          <img 
+              class="individual-selection__decore-image" 
+              src="@img/selection/women.png" 
+              alt=""
+              data-prlx-mouse 
+              data-prlx-cx="200" 
+              data-prlx-cy="700"
+          >
         </div>
       </section>
     </main>
