fix: добавил атрибут для определения фикс элементов

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,6 @@
-<header class="header">
+<header class="header" data-lp>
   <div class="header__container">
-    <button class="header__burger" type="button" data-burger><span></span></button>
+    <button class="header__burger icon-menu" type="button" data-burger><span></span></button>
     <div class="header__logo">
       <img src="@img/icons/logo.svg" alt="Teplicy Logo">
     </div>
